# old_korali

./: .gitignore  404.html  AUTHORS  README.md  TODO.org  index.html  sitemap.xml
developing/beta/: index.html
developing/conventions/: index.html
developing/developing/: index.html
developing/likelihoods/: index.html
developing/par_files/: index.html
developing/python/: index.html
developing/structure/: index.html
developing/upcoming/: index.html
doc/mkdocs/: README.md  mkdocs.yml
doc/mkdocs/docs/: index.md  installation.md  references.md
examples/hierarchical/: index.html
examples/optimizing/: index.html
examples/post/: index.html
examples/sampling/: index.html
hpc/: index.html
installation/: index.html
lib/libgp/: cleanup.sh  setup_daint.sh  setup_euler.sh  setup_mac.sh
lib/libgp/libgp/: .gitignore  CMakeLists.txt  README.md  Sources.cmake
lib/libgp/libgp/contrib/: libgpwrap.pc.in
lib/libgp/libgp/documentation/: main.tex
lib/libgp/libgp/examples/: CMakeLists.txt  gp_example_dense.cc  gp_wrapper_example.cpp
lib/libgp/libgp/examples/plot_tools/: plot_grad.m  plotgp.m
lib/libgp/libgp/examples/plot_tools/shplot/: shloglog.m
lib/libgp/libgp/include/: cov.h  cov_matern5_iso.h  cov_periodic.h  cov_rq_iso.h  cov_se_ard.h  cov_se_iso.h  cov_sum.h  gp.h  rprop.h
lib/libgp/libgp/include/core/: cov_linear_ard.h  cov_linear_one.h  cov_matern3_iso.h  cov_noise.h  cov_periodic_matern3_iso.h  cov_prod.h  gp.h  input_dim_filter.h  rprop.h  sampleset.h
lib/libgp/libgp/include/wrapper/: gp_wrap.h
lib/libgp/libgp/my_wrapper/: Makefile  gp_data.cpp  gp_data.h  testgp.cpp  testgp_reg  tmp
lib/libgp/libgp/my_wrapper/plot_tools/: plot_grad.m
lib/libgp/libgp/my_wrapper/plot_tools/shplot/: shplot.m  shsemilogx.m
lib/libgp/libgp/regression/: Makefile  plotgp.m  testgp_reg  testgp_reg.cpp
lib/libgp/libgp/regression/shplot/: shsemilogy.m
lib/libgp/libgp/src/: cov_factory.cc  cov_linear_ard.cc  cov_linear_one.cc  cov_matern5_iso.cc  cov_noise.cc  cov_periodic.cc  cov_periodic_matern3_iso.cc  gp.cc  rprop.cc
lib/libgp/libgp/src/core/: cov_factory.cc  cov_linear_ard.cc  cov_matern3_iso.cc  cov_prod.cc  cov_rq_iso.cc  cov_se_ard.cc  cov_se_iso.cc  cov_sum.cc  gp.cc  input_dim_filter.cc  sampleset.cc
lib/libgp/libgp/src/play/: test1.cc  test2.cc
lib/libgp/libgp/src/wrapper/: gp_wrap.cpp
lib/libgp/libgp/tests/: CMakeLists.txt  CMakeLists.txt.in  Sources.cmake  gp_regression_test.cc  test_covariance_functions.cc  test_gradx_covariance_functions.cc  test_optimizer.cc  test_vargradx_covariance_functions.cc
references/: index.html
search/: search_index.json
source/CMAES/: Makefile  cmaes.c  cmaes_utils.c  cmaes_utils.h  engine_cmaes.c  engine_cmaes.cpp  engine_cmaes.hpp  engine_cmaes_utils.hpp  fitfun.c
source/DRAM/: Makefile  dram.c  dram.h  dram.par  run_dram.c
source/TMCMC/: .gitignore  Makefile  gaus_priors.par  gaus_tmcmc.par  gp_rosenbrock.par  main.cpp  main_autodiff_example.cpp  main_gaus_example.cpp  main_gp_rosenbrock_example.cpp  main_manifold_gaus_example  main_manifold_gaus_example.cpp  main_manifold_rosenbrock_example.cpp  main_rosenbrock_example.cpp  priors.par  priors_rosenbrock.par  tmcmc.par  tmcmc_rosenbrock.par  tmcmc_run.c
source/experimental/: Makefile  auto_diff_fitfun.cpp  auto_diff_fitfun.hpp  coupled_ode_system.cpp  coupled_ode_system.hpp  diff  fitfun.hpp  main.cpp  system_utils.cpp  system_utils.hpp
source/likelihoods/: Makefile  fitfun.h  fitfun_posterior_theta.c  fitfun_psi.c  fitfun_tests.c  fitfun_tests.h  fitfun_theta.c  fitfun_theta_fast.c  loglike_posterior_theta.c  loglike_posterior_theta.h  loglike_posterior_theta_extended.c  loglike_posterior_thetanew.c  loglike_posterior_thetanew.h  loglike_psi.c  loglike_theta.c  loglike_theta.h  loglike_theta_fast.c  loglike_theta_fast.h
source/likelihoodsxx/: Ifitfun.hpp  Makefile  auto_diff_fitfun.cpp  auto_diff_fitfun.hpp  coupled_ode_system.cpp  coupled_ode_system.hpp  fitfun.hpp  fitfun_tmp.cpp  gaussian.hpp  rosenbrock.hpp  system_utils.cpp  system_utils.hpp
source/make/: common.mk
source/priors/: Makefile  priors.c
source/sCMAES/: Makefile  README.md  actparcmaes.par  cmaes.c  cmaes_interface.h  engine_cmaes.c  engine_scmaes.c  surrogate.cpp  surrogate.h  surrogate_samples.c  surrogate_samples.h
(+187 files in other folders)
